test1/00-amex-transform.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs-test
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /httpbin
      routeAction:
        single:
          upstream:
            name: test-httpbin-80
            namespace: gloo-system
      options:
        prefixRewrite: '/'
    - matchers:
      - prefix: /nginx
      routeAction:
        single:
          upstream:
            name: test-nginx1-80
            namespace: gloo-system
      options:
        prefixRewrite: '/'
