test1/8-vs-auth.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs-test
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /httpbin
      name: httpbin
      routeAction:
        single:
          upstream:
            name: test-httpbin-80
            namespace: gloo-system
      options:
        prefixRewrite: '/'
        extauth:
          customAuth: {}
    - matchers:
      - prefix: /nginx
      name: nginx
      routeAction:
        single:
          upstream:
            name: test-nginx1-80
            namespace: gloo-system
      options:
        prefixRewrite: '/'
